<resources>
    <string name="app_name">Love Music</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">Play Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to Love Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="email_feedback">My Email Address: maiquyenlinh15320@gmail.com</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="play_next">Play Next</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Play Music And Click On &#10084; To Add It Into Favourites. </string>
    <string name="playlist_note">Tip: Click On ➕ To Create New Playlist. </string>
    <string name="khongthexoabaihatdangphat">Can\'t delete the song that\'s playing</string>
    <string name="daxoabaihatkhoidanhsachtiep">Removed song from next playlist</string>
    <string name="dathembaihatvaodanhsachphat">Added to next playlist</string>
    <string name="phatbaihatdautien">Play the first song!!</string>
    <string name="Xoa">Remove</string>
    <string name="ok">OK</string>
    <string name="bancomuonxoadanhsachphat">Do you want to delete playlist?</string>
    <string name="dongy">Yes</string>
    <string name="khong">No</string>
    <string name="chudeden">Black Theme Works Best in Dark Mode!!</string>
    <string name="chedophatnn">Random play mode</string>
    <string name="thoat">Exit</string>
    <string name="bancomuonthoaungdungko">Do you want to close app?</string>
    <string name="dadcchophep">Permission Granted</string>
    <string name="tongbaihat">"Total Songs : "</string>
    <string name="chedophat1bai">Single loop mode</string>
    <string name="danhsachphathientaidanglaplai">Current playlist is looped</string>
    <string name="tinhnagequakodchotro">Equalizer Feature not Supported!!</string>
    <string name="hengiodung">Stop Timer</string>
    <string name="bancomuondunghengio">Do you want to stop timer?</string>
    <string name="chiase">Share...</string>
    <string name="daxoakhoidanhsachyeu">Removed from favorites</string>
    <string name="dathemvaoyeu">Added to favorites</string>
    <string name="nhacsedungsau15phut">Music will stop after 15 minutes</string>
    <string name="nhacsedung30">Music will stop after 30 minutes</string>
    <string name="nhacsedung60">Music will stop after 60 minutes</string>
    <string name="chitietdanhsachphat">Playlist Details</string>
    <string name="them">ADD</string>
    <string name="danhsachphattontai">Playlist Exist!!</string>
    <string name="bancomuonxoatatcabaihatkhong">Do you want to remove all songs from playlist?</string>
    <string name="tong">Totals</string>
    <string name="baihat">Songs.</string>
    <string name="dctaora">Created On:</string>
    <string name="maiquyenlinh">Mr Charst</string>
    <string name="lop">Class:</string>
    <string name="truongdaihoc">University of Transport Communication</string>
    <string name="detaitotnghiep">Application of Graduation Project</string>
    <string name="gopyFeedback">You can give me suggestions in the Feedback section</string>
    <string name="hoanthientothon">To help I will make the app better.</string>
    <string name="phanhoi">Feedback</string>
    <string name="camondaphanhoi">Thanks For Feedback!!</string>
    <string name="cocaigisai">Went Something Wrong!!</string>
    <string name="caidat">Settings</string>
    <string name="dathemganday">Recently Added</string>
    <string name="tenbaihat">Song Title</string>
    <string name="kichthuocfile">File Size</string>
    <string name="sapxep">Sorting</string>
    <string name="apdungchude">Apply Theme</string>
    <string name="bancomuonapdunchude">Do you want to apply theme?</string>
    <string name="tenphienban">Version Name: </string>
    <string name="go_to_feedback">Go to FeedBack</string>
    <string name="Về">About</string>
    <string name="AudioBoost">Audio Boost</string>
    <string name="DETAILS">DETAILS</string>
    <string name="Name">Name:</string>
    <string name="Duration">Duration:</string>
    <string name="Location">Location:</string>
    <string name="Developed">Developed By:</string>
    <string name="gmail">Send Mail…</string>
    <string name="chitiethown">Can you be more detailed?</string>
</resources>