<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ui.nav_left.FeedbackActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicFA"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="?attr/themeColor"
        android:gravity="center|start"
        android:hint="@string/topic_feedback"
        android:inputType="textEmailSubject"
        android:paddingHorizontal="16dp"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgFA"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:backgroundTint="?attr/themeColor"
        android:gravity="center|start"
        android:hint="@string/feedback"
        android:paddingHorizontal="16dp" />

    <Button
        android:id="@+id/sendFA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="?attr/themeColor"
        android:paddingHorizontal="16dp"
        android:text="@string/send"
        android:textColor="@color/white" />

</LinearLayout>